--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Pay4it Terminal</h1>
     <p>IBA Eksamens Projekt 1 - Gruppe 2</p>
-    <input type="button" onclick="" value="Step 1">
+    <input class=btn-step1 type="button" onclick="" value="Step 1">
     <input type="button" onclick="" value="Step 2">
     <input type="button" onclick="" value="Step 3">
     <input type="button" onclick="" value="Step 4">
@@ -18,18 +18,17 @@
     <br>
     <br>
     
-    
+    <!-- HJÆLPE KNAP
     <input class=btn-help type="button" value="Hjælpe Video" id="videoLink" href="#youtube">
     <div id="youtube" style="max-width: 75%; margin: 0 auto;">
         <iframe width="853" height="480" src="https://www.youtube.com/embed/cn4M-fH08XY" frameborder="0"></iframe>
     </div>
-
-
+    -->
 
     <input type="button" onclick="" value="Menu">
 
-
     <script src="main.js"></script>
+    <script src="kabine.js"></script>
 
     <script type="module">               // import, requires type="module"
         import {doSomething} from './test.mjs';
