--- a/step1.html
+++ b/step1.html
@@ -120,14 +120,14 @@
         </div>
 
         <div>
-            <div class="menu">
+            <div class="menu" id="menu">
             <button class="menu-btn" onclick="window.location.href ='#Vare';">
                 <center>
                     <p>Køb extra vare</p>
                 </center>
             </button>
 
-            <button class="menu-btn" onclick="window.location.href ='#Betaling';">
+            <button class="menu-btn" id="menuPay" onclick="window.location.href ='#Betaling';">
                 <center>
                     <p>Gå til Betaling</p>
                 </center>
