--- a/paymentOptions.html
+++ b/paymentOptions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link id="pagestyle" href="/css/step1.css" rel="stylesheet" />
-    <title>Step1 & 2</title>
+    <title>Payment Options</title>
 </head>
 
 <body>
@@ -91,7 +91,7 @@
                 </center>
             </button>
 
-            <button class="menu-btn" id="menuPay" onclick="window.location.href ='/paymentOptions.html';">
+            <button class="menu-btn" id="menuPay" onclick="window.location.href ='#Betaling';">
                 <center>
                     <p>Gå til Betaling</p>
                 </center>
@@ -109,7 +109,7 @@
 
     </div>
 
-<script src="/js/step1.js"></script>
+
 
 </body>
 
