--- a/paymentOptions.html
+++ b/paymentOptions.html
@@ -33,7 +33,7 @@
                 <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
                     <button><i class="fa fa-credit-card"></i></button>
                 </div>
-                <div class="paymentOption" id='Mobilepay' onclick="window.location.href ='/start.html';">
+                <div class="paymentOption" id='qrcode' onclick="window.location.href ='/start.html';">
                     <button><i class="fa fa-qrcode"></i></button>
                 </div>
                 <div class="paymentOption" id='Mobilepay'>
