--- a/paymentOptions.html
+++ b/paymentOptions.html
@@ -14,7 +14,9 @@
 
     <div class="grid-container" id=grid>
 
-        <div><!-- Leave Empty--></div>
+        <div>
+            <!-- Leave Empty-->
+        </div>
         <div>
             <div>
                 <center>
@@ -23,11 +25,15 @@
                 </center>
             </div>
 
-            <div><!-- Leave Empty--></div>
+            <div>
+                <!-- Leave Empty-->
+            </div>
 
             <!-- NEW GRID ROW STARTS HERE-->
 
-            <div><!-- Leave Empty--></div>
+            <div>
+                <!-- Leave Empty-->
+            </div>
 
             <div class="payment">
                 <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
@@ -37,40 +43,48 @@
                     <button><i class="fa fa-qrcode"></i></button>
                 </div>
                 <div class="paymentOption" id='Mobilepay'>
-                    <button><img src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png" onclick="window.location.href ='/start.html';"></button>
+                    <button><img src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png"
+                            onclick="window.location.href ='/start.html';"></button>
                 </div>
             </div>
 
-            <div><!-- Leave Empty--></div>
+            <div>
+                <!-- Leave Empty-->
+            </div>
 
             <!-- NEW GRID ROW STARTS HERE-->
 
-            <div><!-- Leave Empty--></div>
+            <div>
+                <!-- Leave Empty-->
+            </div>
 
             <div>
                 <div class="menu" id="menu">
-                <button class="menu-btn" onclick="window.location.href ='#Vare';">
-                    <center>
-                        <p>Køb extra vare</p>
-                    </center>
-                </button>
+                    <button class="menu-btn" onclick="window.location.href ='#Vare';">
+                        <center>
+                            <p>Køb extra vare</p>
+                        </center>
+                    </button>
 
-                <button class="menu-btn" id="menuPay" onclick="window.location.href ='/step1.html';">
-                    <center>
-                        <p>Tilbage</p>
-                    </center>
-                </button>
+                    <button class="menu-btn" id="menuPay" onclick="window.location.href ='/step1.html';">
+                        <center>
+                            <p>Tilbage</p>
+                        </center>
+                    </button>
 
-                <button class="menu-btn" onclick="window.location.href ='/start.html';">
-                    <center>
-                        <p>Exit</p>
-                    </center>
-                </button>
+                    <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                        <center>
+                            <p>Exit</p>
+                        </center>
+                    </button>
                 </div>
             </div>
+        </div>
 
-            <div><!-- Leave Empty--></div>
-    </div>
+        <div>
+            <!-- Leave Empty-->
+        </div>
+
     </div>
 
 
