--- a/step1.html
+++ b/step1.html
@@ -5,148 +5,236 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link id="pagestyle" href="/css/step1.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/step1.css">
     <title>Step1 & 2</title>
 </head>
 
 <body>
+    <ul class="accordion">
+        <li>
+            <button class="accordion-control">STEP 1</button>
+            <div class="accordion-panel" id="ap1">
+                <div class="grid-container" id=grid>
 
-    <body>
-
-        <div class="grid-container" id=grid>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <center>
-                    <h2>STEP 1</h2><br>
-                    <h3>Vælg en Kabine</h3><br>
-                    <div id="imgId"></div>
-                </center>
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <!-- NEW GRID ROW STARTS HERE-->
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <div class="content" id='content1'></div>
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <!-- NEW GRID ROW STARTS HERE-->
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div class=time-btn>
-                <div>
-                    <!-- Leave Empty-->
-                </div>
-
-                <div id="step2"></div>
-
-                <div>
-                    <!-- Leave Empty-->
-                </div>
-
-                <!-- NEW GRID ROW STARTS HERE-->
-
-                <div>
-                    <!-- Leave Empty-->
-                </div>
-
-                <div class="nested-btn-tid" id="btn-tid"></div>
-
-                <div>
-                    <!-- Leave Empty-->
-                </div>
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <!-- NEW GRID ROW STARTS HERE-->
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <!-- NEW GRID ROW STARTS HERE-->
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <div class="totalPris" id="totalPrisId">
-                    <center>
-                        <h1><b>Pris: 0 DKK</b></h1>
-                    </center>
-                </div>
-            </div>
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <!-- NEW GRID ROW STARTS HERE-->
-
-            <div>
-                <!-- Leave Empty-->
-            </div>
-
-            <div>
-                <div class="menu" id="menu">
-                    <button class="menu-btn" onclick="window.location.href ='#Vare';">
+                    <div></div><!-- Leave Empty-->
+                    <div>
                         <center>
-                            <p>Køb extra vare</p>
+                            <h2>VÆLG EN KABINE</h2><br>
                         </center>
-                    </button>
+                    </div>
+                    <div></div><!-- Leave Empty-->
 
-                    <button class="menu-btn" id="menuPay" onclick="window.location.href ='/paymentOptions.html';">
-                        <center>
-                            <p>Gå til Betaling</p>
-                        </center>
-                    </button>
+                    <div></div><!-- Leave Empty-->
+                    <div>
+                        <div class="content" id='content1'></div>
+                    </div>
+                    <div></div><!-- Leave Empty-->
 
-                    <button class="menu-btn" onclick="window.location.href ='/start.html';">
-                        <center>
-                            <p>Exit</p>
-                        </center>
-                    </button>
+                    <div></div><!-- Leave Empty-->
+                    <div class=time-btn>
+                        <div></div><!-- Leave Empty-->
+                        <div id="step1BtnH2"></div>
+                        <div></div><!-- Leave Empty-->
+
+                        <div></div><!-- Leave Empty-->
+                        <div class="nested-btn-tid" id="btn-tid"></div>
+                        <div></div><!-- Leave Empty-->
+                    </div>
+                    <div></div><!-- Leave Empty-->
+
+                    <div></div><!-- Leave Empty-->
+                    <div>
+                        <div class="totalPris" id="totalPrisId">
+                            <center>
+                                <h1><b>Pris: 0 DKK</b></h1>
+                            </center>
+                        </div>
+                    </div>
+                    <div></div><!-- Leave Empty-->
+
+                    <div></div><!-- Leave Empty-->
+                    <div>
+                        <div class="menu" id="menu">
+                            <button class="menu-btn" id="vare">
+                                <center>
+                                    <p>Køb extra vare</p>
+                                </center>
+                            </button>
+
+                            <button class="menu-btn" id="menuPay">
+                                <!--onclick="window.location.href ='/paymentOptions.html';">-->
+                                <center>
+                                    <p>Gå til Betaling</p>
+                                </center>
+                            </button>
+
+                            <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                                <center>
+                                    <p>Exit</p>
+                                </center>
+                            </button>
+                        </div>
+                    </div>
+                    <div></div><!-- Leave Empty-->
+
                 </div>
             </div>
+        </li>
 
-            <div>
-                <!-- Leave Empty-->
+        <li>
+            <button class="accordion-control">STEP 2</button>
+            <div class="accordion-panel" id="ap2">
+                <div class="grid-container" id=grid2>
+                    <div></div><!-- Leave Empty-->
+                    <div>
+                        <center>
+                            <h2>EXTRA VARE</h2><br>
+                            <br>
+                            <h1>KOMMER SNART</h1><br>
+                        </center>
+                    </div>
+                    <div></div><!-- Leave Empty-->
+
+                    <div></div><!-- Leave Empty-->
+                    <div class="menu" id="menu">
+                        <button class="menu-btn" id="kabineTid">
+                            <center>
+                                <p>Vælg Kabine og Tid</p>
+                            </center>
+                        </button>
+
+                        <button class="menu-btn" id="menuPay2">
+                            <!--onclick="window.location.href ='/paymentOptions.html';">-->
+                            <center>
+                                <p>Gå til Betaling</p>
+                            </center>
+                        </button>
+
+                        <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                            <center>
+                                <p>Exit</p>
+                            </center>
+                        </button>
+                    </div>
+                    <div></div><!-- Leave Empty-->
+                </div>
             </div>
+        </li>
+        <li>
+            <button class="accordion-control">STEP 3</button>
+            <div class="accordion-panel" id="ap3">
+                <div class="grid-container" id=grid2>
 
-        </div>
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div>
+                            <center>
+                                <h2>VÆLG BETALINGSMETODE</h2><br>
+                            </center>
+                        </div>
+                        <div></div><!-- Leave Empty-->
 
-        <script src="/js/step1.js"></script>
+                        <div></div><!-- Leave Empty-->
+                        <div class="payment">
+                            <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
+                                <button><i class="fa fa-credit-card"></i></button>
+                            </div>
+                            <div class="paymentOption" id='qrcode' onclick="window.location.href ='/start.html';">
+                                <button><i class="fa fa-qrcode"></i></button>
+                            </div>
+                            <div class="paymentOption" id='Mobilepay'>
+                                <button><img
+                                        src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png"
+                                        onclick="window.location.href ='/start.html';"></button>
+                            </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
 
-    </body>
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div class="totalPris" id="totalPris2Id">
+                            <center>
+                                <h1><b>Pris: 0 DKK</b></h1>
+                            </center>
+                        </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+                        <br><br><br>
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                            <div class="menu" id="menu">
+                                <button class="menu-btn" id="vare">
+                                    <center>
+                                        <p>Køb extra vare</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" id="kabineTid">
+                                    <center>
+                                        <p>Vælg Kabine og Tid</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                                    <center>
+                                        <p>Exit</p>
+                                    </center>
+                                </button>
+                            </div>
+                        </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+                </div>
+            </div>
+        </li>
+        <li>
+            <button class="accordion-control">STEP 4</button>
+            <div class="accordion-panel" id="ap4">
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div>
+                            <center>
+                                <h2>BEKRÆFT ORDRE</h2><br>
+                            </center>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                            <div class="menu" id="menu">
+                                <button class="menu-btn" id="vare">
+                                    <center>
+                                        <p>Køb extra vare</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" id="kabineTid">
+                                    <center>
+                                        <p>Vælg Kabine og Tid</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                                    <center>
+                                        <p>Exit</p>
+                                    </center>
+                                </button>
+                            </div>
+                        </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+            </div>
+        </li>
+    </ul>
+
+    <div id=errorMessage></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/js/step1.js"></script>
+
+</body>
 
 </html>
