--- a/step1.html
+++ b/step1.html
@@ -13,7 +13,7 @@
 <body>
     <ul class="accordion">
         <li>
-            <button class="accordion-control">STEP 1</button>
+            <div class="accordion-control"><h3><center>STEP 1</center></h3></div>
             <div class="accordion-panel" id="ap1">
                 <div class="grid-container" id=grid>
 
@@ -62,10 +62,10 @@
                                 </center>
                             </button>
 
-                            <button class="menu-btn" id="menuPay">
+                            <button class="menu-btn" id="confirmOrder">
                                 <!--onclick="window.location.href ='/paymentOptions.html';">-->
                                 <center>
-                                    <p>Gå til Betaling</p>
+                                    <p>Afslut Bestilling</p>
                                 </center>
                             </button>
 
@@ -83,7 +83,7 @@
         </li>
 
         <li>
-            <button class="accordion-control">STEP 2</button>
+            <div class="accordion-control"><h3><center>STEP 2</center></h3></div>
             <div class="accordion-panel" id="ap2">
                 <div class="grid-container" id=grid2>
                     <div></div><!-- Leave Empty-->
@@ -104,10 +104,10 @@
                             </center>
                         </button>
 
-                        <button class="menu-btn" id="menuPay2">
+                        <button class="menu-btn" id="confirmOrder2">
                             <!--onclick="window.location.href ='/paymentOptions.html';">-->
                             <center>
-                                <p>Gå til Betaling</p>
+                                <p>Afslut Bestilling</p>
                             </center>
                         </button>
 
@@ -122,15 +122,74 @@
             </div>
         </li>
         <li>
-            <button class="accordion-control">STEP 3</button>
+            <div class="accordion-control"><h3><center>STEP 3</center></h3></div>
             <div class="accordion-panel" id="ap3">
                 <div class="grid-container" id=grid2>
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div>
+                            <center>
+                                <h2>BEKRÆFT ORDRE</h2><br>
+                            </center>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div class="totalPris" id="totalPris2Id">
+                            <center>
+                                <h1><b>Pris: 0 DKK</b></h1>
+                            </center>
+                        </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+                        <br><br><br>
 
                         <div></div><!-- Leave Empty-->
                         <div>
                         <div>
                             <center>
-                                <h2>VÆLG BETALINGSMETODE</h2><br>
+                                <h2>Er din ordre korrekt?</h2><br>
+                            </center>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                            <div class="menu" id="menu">
+                                <button class="menu-btn" id="orderNo">
+                                    <center>
+                                        <p>Nej</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" id="orderYes">
+                                    <center>
+                                        <p>Ja</p>
+                                    </center>
+                                </button>
+
+                                <button class="menu-btn" onclick="window.location.href ='/start.html';">
+                                    <center>
+                                        <p>Exit</p>
+                                    </center>
+                                </button>
+                            </div>
+                        </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="accordion-control"><h3><center>STEP 4</center></h3></div>
+            <div class="accordion-panel" id="ap4">
+                <div class="grid-container" id=grid2>
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                        <div>
+                            <center>
+                                <h2>VÆLG BETALINGSFORM</h2><br>
                             </center>
                         </div>
                         <div></div><!-- Leave Empty-->
@@ -150,82 +209,38 @@
                             </div>
                         </div>
                         <div></div><!-- Leave Empty-->
-
-                        <div></div><!-- Leave Empty-->
-                        <div>
-                        <div class="totalPris" id="totalPris2Id">
-                            <center>
-                                <h1><b>Pris: 0 DKK</b></h1>
-                            </center>
-                        </div>
-                        </div>
-                        <div></div><!-- Leave Empty-->
-                        <br><br><br>
-                        <div></div><!-- Leave Empty-->
-                        <div>
-                            <div class="menu" id="menu">
-                                <button class="menu-btn" id="vare">
-                                    <center>
-                                        <p>Køb extra vare</p>
-                                    </center>
-                                </button>
-
-                                <button class="menu-btn" id="kabineTid">
-                                    <center>
-                                        <p>Vælg Kabine og Tid</p>
-                                    </center>
-                                </button>
-
-                                <button class="menu-btn" onclick="window.location.href ='/start.html';">
-                                    <center>
-                                        <p>Exit</p>
-                                    </center>
-                                </button>
-                            </div>
-                        </div>
-                        </div>
-                        <div></div><!-- Leave Empty-->
-
                 </div>
             </div>
         </li>
         <li>
-            <button class="accordion-control">STEP 4</button>
+            <div class="accordion-control"><h3><center>STEP 5</center></h3></div>
             <div class="accordion-panel" id="ap4">
+                <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
                         <div>
                         <div>
                             <center>
-                                <h2>BEKRÆFT ORDRE</h2><br>
+                                <h2>BETALINGS KORT</h2><br>
                             </center>
                         </div>
                         <div></div><!-- Leave Empty-->
 
                         <div></div><!-- Leave Empty-->
-                        <div>
-                            <div class="menu" id="menu">
-                                <button class="menu-btn" id="vare">
-                                    <center>
-                                        <p>Køb extra vare</p>
-                                    </center>
-                                </button>
-
-                                <button class="menu-btn" id="kabineTid">
-                                    <center>
-                                        <p>Vælg Kabine og Tid</p>
-                                    </center>
-                                </button>
-
-                                <button class="menu-btn" onclick="window.location.href ='/start.html';">
-                                    <center>
-                                        <p>Exit</p>
-                                    </center>
-                                </button>
+                        <div class="payment">
+                            <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
+                                <button><i class="fa fa-credit-card"></i></button>
+                            </div>
+                            <div class="paymentOption" id='qrcode' onclick="window.location.href ='/start.html';">
+                                <button><i class="fa fa-qrcode"></i></button>
+                            </div>
+                            <div class="paymentOption" id='Mobilepay'>
+                                <button><img
+                                        src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png"
+                                        onclick="window.location.href ='/start.html';"></button>
                             </div>
                         </div>
-                        </div>
                         <div></div><!-- Leave Empty-->
-
+                </div>
             </div>
         </li>
     </ul>
