--- a/step1.html
+++ b/step1.html
@@ -127,7 +127,6 @@
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
                         <div>
-                        <div>
                             <center>
                                 <h2>BEKRÆFT ORDRE</h2><br>
                             </center>
@@ -143,10 +142,8 @@
                         </div>
                         </div>
                         <div></div><!-- Leave Empty-->
-                        <br><br><br>
 
                         <div></div><!-- Leave Empty-->
-                        <div>
                         <div>
                             <center>
                                 <h2>Er din ordre korrekt?</h2><br>
@@ -187,25 +184,37 @@
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
                         <div>
-                        <div>
                             <center>
-                                <h2>VÆLG BETALINGSFORM</h2><br>
+                                <h2>VÆLG BETALINGSFORM</h2>
                             </center>
                         </div>
                         <div></div><!-- Leave Empty-->
 
                         <div></div><!-- Leave Empty-->
                         <div class="payment">
-                            <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
-                                <button><i class="fa fa-credit-card"></i></button>
+                            <div class="paymentOption" id='creditcard' onclick="loadCreditcard()">
+                                <button><i class="fa fa-credit-card"></i><br><p style="color:azure;"><b>KREDIT KORT</b></p></button>
                             </div>
-                            <div class="paymentOption" id='qrcode' onclick="window.location.href ='/start.html';">
-                                <button><i class="fa fa-qrcode"></i></button>
+                            <div class="paymentOption" id='qrCode' onclick="loadQrCode()">
+                                <button><i class="fa fa-qrcode"></i><br><p style="color:azure;"><b>QR KODE</b></p></button>
                             </div>
-                            <div class="paymentOption" id='Mobilepay'>
-                                <button><img
-                                        src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png"
-                                        onclick="window.location.href ='/start.html';"></button>
+                            <div class="paymentOption" id='mobilePay'>
+                                <button><img src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png" onclick="loadMobilePay()"></button>
+                            </div>
+                        </div>
+                        <div></div><!-- Leave Empty-->
+
+                        <div></div><!-- Leave Empty-->
+                        <div>
+                            <div class="menu" id="menu">
+                                <div></div><!-- Leave Empty-->
+                                <button class="menu-btn" id="confirmOrder">
+                                    <!--onclick="window.location.href ='/paymentOptions.html';">-->
+                                    <center>
+                                        <p>Tilbage</p>
+                                    </center>
+                                </button>
+                                <div></div><!-- Leave Empty-->
                             </div>
                         </div>
                         <div></div><!-- Leave Empty-->
@@ -214,34 +223,47 @@
         </li>
         <li>
             <div class="accordion-control"><h3><center>STEP 5</center></h3></div>
-            <div class="accordion-panel" id="ap4">
+            <div class="accordion-panel" id="ap5">
                 <div class="grid-container" id=grid2>
                         <div></div><!-- Leave Empty-->
                         <div>
-                        <div>
                             <center>
-                                <h2>BETALINGS KORT</h2><br>
+                                <!--<h1>VENTER PÅ BETALING</h1><br>-->
+                                <h2 id=instructions></h2>
                             </center>
                         </div>
                         <div></div><!-- Leave Empty-->
 
                         <div></div><!-- Leave Empty-->
-                        <div class="payment">
-                            <div class="paymentOption" id='creditcard' onclick="window.location.href ='/start.html';">
-                                <button><i class="fa fa-credit-card"></i></button>
+                        <div>
+                            <div class="creditCardContent" id="creditCardContent1">
+
+                            <!--Content will be loaded here-->
                             </div>
-                            <div class="paymentOption" id='qrcode' onclick="window.location.href ='/start.html';">
-                                <button><i class="fa fa-qrcode"></i></button>
-                            </div>
-                            <div class="paymentOption" id='Mobilepay'>
-                                <button><img
-                                        src="/img/Payment Images/mobilePay/PNG/MP_RGB_NoTM_Logo+Type Vertical White.png"
-                                        onclick="window.location.href ='/start.html';"></button>
-                            </div>
+                            <section class="loadingSpinner" id="loadSpinner">
+                            <svg class="spinner" width="174px" height="174px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                               <circle class="path" fill="transparent" stroke-width="2" cx="33" cy="33" r="30" stroke="url(#gradient)"/>
+                                 <linearGradient id="gradient">
+                                   <stop offset="50%" stop-color="#42d179" stop-opacity="1"/>
+                                   <stop offset="65%" stop-color="#42d179" stop-opacity=".5"/>
+                                   <stop offset="100%" stop-color="#42d179" stop-opacity="0"/>
+                                 </linearGradient>
+                              </circle>
+                               <svg class="spinner-dot dot" width="5px" height="5px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" x="37" y="1.5">
+                                 <circle class="path" fill="#42d179" cx="33" cy="33" r="30"/>
+                                </circle>
+                              </svg> 
+                            </svg> 
+                          </section>
+                        </div>
                         </div>
                         <div></div><!-- Leave Empty-->
                 </div>
             </div>
+        </li>
+        <li>
+            <div class="accordion-control"><h3><center>STEP 5</center></h3></div>
+            <div class="accordion-panel" id="ap6">
         </li>
     </ul>
 
