--- a/start.html
+++ b/start.html
@@ -30,10 +30,10 @@
 
     <div id="helpOptions">
         <h2>BRUG FOR KUNDESERVICE</h2>
-        <h3>Tlf: +45 70 70 40 40  |  E-mail: kundeservice@pay4it.dk</h3>
+        <h3>Tlf: +45 26 81 55 00  |  E-mail: kontakt@pay4it.dk</h3>
         <br>
         <h2>BRUG FOR TEKNISK HJÆLP</h2>
-        <h3>Tlf: +45 26 81 55 00  |  E-mail: kontakt@pay4it.dk</h3>
+        <h3>Tlf: +45 28 44 18 29  |  E-mail: mads2097@gmail.com</h3>
         <br>
         <!--<iframe width="768" height="432" src="https://www.youtube-nocookie.com/embed/cn4M-fH08XY?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" fs="0" controls="0"></iframe>-->
         
